# CppBlock

./: .gitignore  CMakeLists.txt
include/: Block.h  Blockchain.h  TUI.h  Transaction.h  Utils.h  Wallet.h
src/: Block.cpp  Blockchain.cpp  TUI.cpp  Transaction.cpp  Utils.cpp  Wallet.cpp  main.cpp
